--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
         <ul class="contact-nav">
           <li class="contact-nav__item">
-            <a href="mailto:info@devstudio.com" class="contact-nav__link">
+            <a href="mailto:info@devstudio.com" class="contact-nav__link mail">
               <svg class="contact-nav__icon" width="16px" height="16px">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
@@ -51,7 +51,7 @@
             </a>
           </li>
           <li class="contact-nav__item">
-            <a href="tel:+380961111111" class="contact-nav__link">
+            <a href="tel:+380961111111" class="contact-nav__link tel">
               <svg class="contact-nav__icon" width="16px" height="16px">
                 <use href="./images/icons.svg#icon-tel"></use>
               </svg>
@@ -70,22 +70,19 @@
               <use href="./images/icons.svg#icon-close_menu"></use>
             </svg>
           </button>
-          <div class="mobile-menu__nav">
-            <ul class="mobile-nav">
-              <li class="mobile-nav__item">
-                <a class="mobile-nav__link" href="./index.html">Студия</a>
-              </li>
-              <li class="mobile-nav__item">
-                <a class="mobile-nav__link" href="./portfolio.html"
-                  >Портфолио</a
-                >
-              </li>
-              <li class="mobile-nav__item">
-                <a class="mobile-nav__link" href="">Контакты</a>
-              </li>
-            </ul>
-          </div>
-
+          <ul class="mobile-nav">
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link--current" href="./index.html"
+                >Студия</a
+              >
+            </li>
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link" href="">Контакты</a>
+            </li>
+          </ul>
           <div class="mobile-menu__auth">
             <ul class="mobile-auth">
               <li class="mobile-auth__item">
