--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
                 <a class="mobile-nav__link" href="./index.html">Студия</a>
               </li>
               <li class="mobile-nav__item">
-                <a class="mobile-nav__link" href="./portfolio.html"
+                <a class="mobile-nav__link--current" href="./portfolio.html"
                   >Портфолио</a
                 >
               </li>
