--- a/index.html
+++ b/index.html
@@ -630,59 +630,61 @@
     <footer class="footer">
       <div class="footer__container container">
         <div class="footer-left">
-          <a class="logo--footer" href="index.html" lang="en"
-            ><span class="web">Web</span>Studio</a
-          >
-          <address>
-            <ul class="contacts">
-              <li class="contacts__item">
-                <a href="#" class="contacts__address"
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
+          <div class="footer-address">
+            <a class="logo--footer" href="index.html" lang="en"
+              ><span class="web">Web</span>Studio</a
+            >
+            <address>
+              <ul class="contacts">
+                <li class="contacts__item">
+                  <a href="#" class="contacts__address"
+                    >г. Киев, пр-т Леси Украинки, 26</a
+                  >
+                </li>
+                <li class="contacts__item">
+                  <a href="#" class="contacts__mail">info@example.com</a>
+                </li>
+                <li class="contacts__item">
+                  <a href="#" class="contacts__tel">+380991111111</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer-network">
+            <p class="footer-right__title">ПРИСОЕДИНЯЙТЕСЬ</p>
+            <ul class="footer-social">
+              <li class="footer-social__list">
+                <a href="#" class="footer-social__link">
+                  <svg class="footer-social__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="contacts__item">
-                <a href="#" class="contacts__mail">info@example.com</a>
+              <li class="footer-social__list">
+                <a href="#" class="footer-social__link">
+                  <svg class="footer-social__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="contacts__item">
-                <a href="#" class="contacts__tel">+380991111111</a>
+              <li class="footer-social__list">
+                <a href="#" class="footer-social__link">
+                  <svg class="footer-social__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social__list">
+                <a href="#" class="footer-social__link">
+                  <svg class="footer-social__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
+          </div>
         </div>
-        <div class="right footer-right">
-          <p class="footer-right__title">ПРИСОЕДИНЯЙТЕСЬ</p>
-          <ul class="footer-social">
-            <li class="footer-social__list">
-              <a href="#" class="footer-social__link">
-                <svg class="footer-social__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social__list">
-              <a href="#" class="footer-social__link">
-                <svg class="footer-social__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social__list">
-              <a href="#" class="footer-social__link">
-                <svg class="footer-social__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social__list">
-              <a href="#" class="footer-social__link">
-                <svg class="footer-social__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-subscribe">
+        <form class="footer-form">
           <p class="footer-subscribe__title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
           <form class="footer-form" name="email">
             <label for="email" class="footer-form__label"></label>
@@ -756,7 +758,10 @@
             name="policy"
             id="checkbox-agr"
           />
-          <label class="modal-form__check modal-form__checkbox" for="checkbox-agr">
+          <label
+            class="modal-form__check modal-form__checkbox"
+            for="checkbox-agr"
+          >
             Соглашаюсь с рассылкой и принимаю&nbsp;
             <a class="modal-form__link" href="#"> Условия договора</a>
           </label>
