--- a/portfolio.html
+++ b/portfolio.html
@@ -178,6 +178,7 @@
                                     <img
                                     src="#"
                                     alt="Пример-1"
+                                    loading="lazy"
                                     />
                                 </picture>
                   <p class="flex-container__text">
