--- a/portfolio.html
+++ b/portfolio.html
@@ -746,7 +746,7 @@
             />
             <button type="button" class="footer-form__button">
               Подписаться
-              <svg class="footer-form__icon" width="24" height="24">
+              <svg class="footer-form__icon">
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
